--- a/sdk/typescript/ms-datasync-client/.vscode/launch.json
+++ b/sdk/typescript/ms-datasync-client/.vscode/launch.json
@@ -18,7 +18,7 @@
             "request": "launch",
             "name": "Mocha (SELECTION)",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-            "args": ["--grep", "SELECTION"],
+            "args": [ "--grep", "SELECTION", "--timeout", "30000" ],
             "cwd": "${workspaceRoot}",
             "internalConsoleOptions": "openOnSessionStart"
         }
