--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -48,6 +48,7 @@
     "test:node": "nyc --reporter none mocha --reporter progress"
   },
   "dependencies": {
+    "@azure/core-paging": "^1.3.0",
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
     "ip6addr": "^0.2.5",
