--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -56,6 +56,7 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@azure/core-rest-pipeline": "^1.9.0",
     "@microsoft/api-extractor": "^7.28.4",
     "@types/chai": "^4.3.1",
     "@types/chai-string": "^1.4.2",
