--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -62,6 +62,7 @@
     "@microsoft/api-extractor": "^7.28.4",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-datetime": "^0.0.37",
     "@types/chai-string": "^1.4.2",
     "@types/ip6addr": "^0.2.3",
     "@types/mocha": "^9.1.1",
@@ -71,6 +72,7 @@
     "axios-logger": "^2.6.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
+    "chai-datetime": "^1.8.0",
     "chai-string": "^1.5.0",
     "downlevel-dts": "^0.10.0",
     "eslint": "^8.19.0",
