--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -48,32 +48,29 @@
     "test:node": "nyc --reporter none mocha --reporter progress"
   },
   "dependencies": {
-    "@azure/abort-controller": "^1.1.0",
-    "@azure/core-client": "^1.6.0",
+    "@azure/core-auth": "^1.4.0",
+    "@azure/core-client": "^1.6.1",
     "@azure/core-paging": "^1.3.0",
-    "axios": "^0.27.2",
-    "cross-fetch": "^3.1.5",
     "ip6addr": "^0.2.5",
-    "tslib": "^2.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@azure/core-rest-pipeline": "^1.9.0",
     "@microsoft/api-extractor": "^7.28.4",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-datetime": "^0.0.37",
     "@types/chai-string": "^1.4.2",
+    "@types/chai-subset": "^1.3.3",
     "@types/ip6addr": "^0.2.3",
     "@types/mocha": "^9.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "axios-logger": "^2.6.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.8.0",
     "chai-string": "^1.5.0",
+    "chai-subset": "^1.6.0",
     "downlevel-dts": "^0.10.0",
     "eslint": "^8.19.0",
     "karma": "^6.4.0",
