--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.Swashbuckle/Microsoft.AspNetCore.Datasync.Swashbuckle.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.Swashbuckle/Microsoft.AspNetCore.Datasync.Swashbuckle.csproj
@@ -1,16 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Description>An Entity Framework Core based repository for use with the ASP.NET Core Datasync framework.</Description>
+		<Description>Swashbuckle bindings for the Microsoft Datasync Framework.</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</IconUrl>
 		<LangVersion>10.0</LangVersion>
 		<NeutralLanguage>en</NeutralLanguage>
-		<PackageId>Microsoft.AspNetCore.Datasync.EFCore</PackageId>
+		<PackageId>Microsoft.AspNetCore.Datasync.Swashbuckle</PackageId>
 		<PackageTags>microsoft;aspnetcore;cloud;datasync;webapi</PackageTags>
-		<ProductName>Microsoft.AspNetCore.Datasync.EFCore</ProductName>
+		<ProductName>Microsoft.AspNetCore.Datasync.Swashbuckle</ProductName>
 		<ProjectUrl>https://github.com/Azure/azure-mobile-apps</ProjectUrl>
 		<RepositoryUrl>https://github.com/Azure/azure-mobile-apps</RepositoryUrl>
-		<RootNamespace>Microsoft.AspNetCore.Datasync.EFCore</RootNamespace>
+		<RootNamespace>Microsoft.AspNetCore.Datasync.Swashbuckle</RootNamespace>
 		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 
