--- a/samples/Samples.NSwag/appsettings.json
+++ b/samples/Samples.NSwag/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoItemsSample;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NSwagSample;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
