--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -94,6 +94,18 @@ stages:
             inputs:
               testAssemblyVer2: |
                 **\Microsoft.*.Test.dll
+                !**\Microsoft.Datasync.Integration.Test.dll
+                !**\obj\**
+                !**\bin\**\ref\**
+              searchFolder: $(netSdkPath)
+              codeCoverageEnabled: true
+              configuration: $(buildConfiguration)
+
+          - task: VSTest@2
+            displayName: 'Run Integration Tests'
+            inputs:
+              testAssemblyVer2: |
+                **\Microsoft.Datasync.Integration.Test.dll
                 !**\obj\**
                 !**\bin\**\ref\**
               searchFolder: $(netSdkPath)
