Increased build timeout to 90 minutes

--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -64,6 +64,7 @@ stages:
     displayName: Build SDK
     jobs:
       - job: buildnetsdk
+        timeoutInMinutes: 90
         displayName: Build .NET SDK
         steps:
           - template: prebuild.yml
