--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -62,23 +62,43 @@ resources:
       endpoint: xamarin
 
 stages:
-  - stage: build
+  - stage: setup
+    displayName: Configure Pipeline
+    jobs:
+      - job: configbuildnumber
+        display: Configure Build number
+        steps:
+          - pwsh: |
+              $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
+              $nuget = $env:BASE_VERSION + "-" + $pr + "." + $env:BUILD_NUMBER
+              Write-Host "Preview label: $pr"
+              Write-Host "NuGet version: $nuget"
+              Write-Host "##vso[task.setvariable variable=PREVIEW_LABEL]$pr"
+              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$nuget"
+            displayName: Override version for PRs
+            condition: eq(variables['Build.Reason'], 'PullRequest')
+
+          - pwsh: |
+              $tagVersion = $env:BUILD_SOURCEBRANCHNAME
+              Write-Host "Tag version: $tagVersion"
+              Write-Host "##vso[task.setvariable variable=NUGET_VERSION]$tagVersion"
+            displayName: Override version for tags
+            condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+
+          - pwsh: |
+              Write-Host "##vso[build.updatebuildnumber]$env:NUGET_VERSION"
+            displayName: Update the build number with a more readable one 
+
+  - stage: buildstage
     displayName: Build SDK
     jobs:
       - job: buildnetsdk
         displayName: Build .NET SDK
         steps:
-          - template: prebuild.yml
-          
-          - pwsh: |
-              dotnet tool restore
-            displayName: install dotnet tools
-            workingDirectory: $(netSdkPath)
-
-          - pwsh: |
-              dotnet workload restore --project .\src\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj
-            displayName: install dotnet workloads
-            workingDirectory: $(netSdkPath)
+          - template: modules/install-dotnet.yml
+            parameters:
+              project: '.\src\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj'
+              workingDirectory: $(netSdkPath)
 
           - task: MSBuild@1
             displayName: 'Build SDK'
@@ -86,21 +106,81 @@ stages:
               configuration: $(buildConfiguration)
               solution: '$(netSdkPath)/Datasync.Framework.sln'
               msBuildArguments: '/nologo /t:Restore;Build;Pack /p:PackageVersion=$(NUGET_VERSION) /p:Version=$(BASE_VERSION) /bl /clp:DisableConsoleColor;Verbosity:normal;PerformanceSummary /fl'
-          
-          - template: copyartifacts.yml
+
+          - template: modules/copy-to-artifacts.yml
+            parameters:
+              artifact: 'build'
+              displayName: 'Consolidate src build artifacts'
+              sourceDirectory: '$(netSdkPath)/src'
+              buildConfiguration: '$(buildConfiguration)'
+              filter: '*Datasync*'
+
+          - template: modules/copy-to-artifacts.yml
+            parameters:
+              artifact: 'test'
+              displayName: 'Consolidate test build artifacts'
+              sourceDirectory: '$(netSdkPath)/test'
+              buildConfiguration: '$(buildConfiguration)'
+              filter: '*Datasync*'
+
+          - template: modules/copy-nuget-packages.yml
             parameters:
               sourceDirectory: '$(netSdkPath)/src'
-              testDirectory: '$(netSdkPath)/test'
               buildConfiguration: '$(buildConfiguration)'
-
-      - job: testnetsdk
-        timeoutInMinutes: 90
-        displayName: Test .NET SDK
-        dependsOn: [ 'buildnetsdk' ]
-        steps:
-          - task: DownloadBuildArtifact@1
+          
+          - task: PublishBuildArtifacts@1
+            displayName: Publish SignList.xml
             inputs:
-              artifactName: './test'
+              pathtoPublish: '$(netSdkPath)/SignList.xml'
+              artifactName: nuget
+
+      - job: buildnettemplate
+        displayName: Build .NET Core Template
+        steps:
+          - task: UseDotNet@2
+            inputs:
+              version: '6.0.x'
+              performMultiLevelLookup: true
+
+          - pwsh: |
+              (Get-Content -path "Template.DatasyncServer.csproj.template") -replace "{NUGET_VERSION}", "$(NUGET_VERSION)" | Set-Content -Path "./Template.DatasyncServer.csproj"
+            displayName: Generate csproj from template
+            workingDirectory: '$(netSdkPath)/templates/Template.DatasyncServer'
+
+          - pwsh: |
+              dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
+            displayName: Build Template
+            workingDirectory: '$(netSdkPath)/templates'
+
+          - template: modules/copy-to-artifacts.yml
+            parameters:
+              artifact: 'build'
+              displayName: 'Consolidate template build artifacts'
+              sourceDirectory: '$(netSdkPath)/templates'
+              buildConfiguration: '$(buildConfiguration)'
+              filter: '*Datasync*'
+
+          - template: modules/copy-nuget-packages.yml
+            parameters:
+              sourceDirectory: '$(netSdkPath)/templates'
+              buildConfiguration: '$(buildConfiguration)' 
+
+  - stage: teststage
+    displayName: Test SDK
+    dependsOn: [ 'buildstage' ]
+    condition: succeeded()
+    jobs:
+      - job: unittestnetsdk
+        displayName: Unit Tests
+        steps:
+          - template: modules/install-dotnet.yml
+            parameters:
+              project: '.\src\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj'
+              workingDirectory: $(netSdkPath)
+
+          - task: DownloadPipelineArtifact@2
+            inputs:
+              artifactName: 'test'
             displayName: 'Download Test Assemblies'
 
           - pwsh: |
@@ -115,61 +195,43 @@ stages:
                 !**\Microsoft.Datasync.Integration.Test.dll
                 !**\obj\**
                 !**\bin\**\ref\**
-              searchFolder: $(netSdkPath)
+              searchFolder: '$(System.ArtifactsDirectory)'
               codeCoverageEnabled: true
+              rerunFailedTests: true
+              PublishTestResults: true
               configuration: $(buildConfiguration)
+
+      - job: integrationtestnetsdk
+        displayName: Integration Tests
+        steps:
+          - template: modules/install-dotnet.yml
+            parameters:
+              project: '.\src\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj'
+              workingDirectory: $(netSdkPath)
+
+          - task: DownloadPipelineArtifact@2
+            inputs:
+              artifactName: 'test'
+            displayName: 'Download Test Assemblies'
+
+          - pwsh: |
+              Get-ChildItem '$(System.ArtifactsDirectory)' -Directory -Recurse | Write-Host
+            displayName: 'Display Test Assemblies'
 
           - task: VSTest@2
-            displayName: 'Run Integration Tests'
+            displayName: 'Run Unit Tests'
             inputs:
               testAssemblyVer2: |
-                **\Microsoft.Datasync.Integration.Test.dll
-                !**\obj\**
-                !**\bin\**\ref\**
-              searchFolder: $(netSdkPath)
+                !*\Microsoft.Datasync.Integration.Test.dll
+              searchFolder: '$(System.ArtifactsDirectory)'
               codeCoverageEnabled: true
+              rerunFailedTests: true
+              PublishTestResults: true
               configuration: $(buildConfiguration)
 
-          - task: PublishTestResults@2
-            displayName: 'Publish Test Results'
-            inputs:
-              testResultsFormat: xUnit
-              testResultsFiles: 'TestResults\**'
-              searchFolder: $(netSdkPath)
-              configuration: $(buildConfiguration)
-
-      - job: buildnettemplate
-        displayName: Build .NET Core Template
-        steps:
-          - template: prebuild.yml
-
-          - pwsh: |
-              (Get-Content -path "Template.DatasyncServer.csproj.template") -replace "{NUGET_VERSION}", "$(NUGET_VERSION)" | Set-Content -Path "./Template.DatasyncServer.csproj"
-            displayName: Generate csproj from template
-            workingDirectory: '$(netSdkPath)/templates/Template.DatasyncServer'
-
-          - pwsh: |
-              dotnet pack DatasyncTemplates.csproj --configuration $(buildConfiguration) /p:PackageVersion=$(NUGET_VERSION)
-            displayName: Build Template
-            workingDirectory: '$(netSdkPath)/templates'
-
-          - template: postbuild.yml
-            parameters:
-              sourceDirectory: '$(netSdkPath)/templates'
-              buildConfiguration: '$(buildConfiguration)'
-
-      - job: presign
-        displayName: Pre-signing Tasks
-        steps: 
-          - task: PublishBuildArtifacts@1
-            displayName: Publish SignList.xml
-            inputs:
-              pathtoPublish: '$(netSdkPath)/SignList.xml'
-              artifactName: nuget
-
-  - stage: sign
+  - stage: signstage
     displayName: Sign SDK
-    dependsOn: [ 'build' ]
+    dependsOn: [ 'teststage' ]
     condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
     jobs:
       - template: sign-artifacts/jobs/v2.yml@internal-templates
@@ -177,7 +239,7 @@ stages:
   - stage: postbuild
     displayName: Postbuild Checks
     condition: eq('refs/heads/main', variables['Build.SourceBranch'])
-    dependsOn: [ 'build' ]
+    dependsOn: [ 'buildstage' ]
     jobs:
       - job: postbuild_checks
         displayName: 'Run required code checks'
@@ -225,9 +287,9 @@ stages:
           - task: PublishSecurityAnalysisLogs@3
             displayName: 'Publish security analysis logs'
 
-  - stage: release
+  - stage: releasestage
     displayName: Release SDK
-    dependsOn: [ 'sign' ]
+    dependsOn: [ 'signstage' ]
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     jobs:
       - job: update_github_release
