--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -66,7 +66,7 @@ stages:
     displayName: Configure Pipeline
     jobs:
       - job: configbuildnumber
-        display: Configure Build number
+        displayName: Configure Build number
         steps:
           - pwsh: |
               $pr = "pr." + $env:SYSTEM_PULLREQUEST_PULLREQUESTNUMBER
