(#559) Convert sample to use ConcurrentObservableCollection

--- a/samples/TodoApp/TodoApp.AvaloniaUI/TodoApp.AvaloniaUI.csproj
+++ b/samples/TodoApp/TodoApp.AvaloniaUI/TodoApp.AvaloniaUI.csproj
@@ -8,8 +8,11 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
+    <AvaloniaXaml Remove="Models\**" />
+    <Compile Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
     <None Remove=".gitignore" />
     <None Remove="Assets\additem.png" />
     <None Remove="Assets\refresh.png" />
