--- a/sdk/dotnet/src/Microsoft.Datasync.Client.SQLiteStore/Microsoft.Datasync.Client.SQLiteStore.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client.SQLiteStore/Microsoft.Datasync.Client.SQLiteStore.csproj
@@ -26,6 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
   </ItemGroup>
 
