Added manual trigger to stale.yml for testing.

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,8 +7,9 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: '30 3 * * *'
-
+    - cron: '30 3 * * *'
+  workflow_dispatch:
+  
 jobs:
   stale:
 
