--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
@@ -30,11 +30,12 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.8.0-dev.458" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.0-dev.458" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.0-dev.458" />
+	  <PackageReference Include="Microsoft.Datasync.Client" Version="5.0.20" />
+    <PackageReference Include="Uno.WinUI" Version="4.7.44" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.44" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.44" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.8.0-dev.458" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.44" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net7.0-android'">
