fix: Remove wasm target

--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Windows/Properties/launchSettings.json
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Windows/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "TodoApp.Uno.Windows": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "alwaysReinstallApp": true
     }
   }
 }
