(#641) route picker update for template routes (Swashbuckle)

--- a/sdk/dotnet/test/Microsoft.AspNetCore.Datasync.Swashbuckle.Test/Microsoft.AspNetCore.Datasync.Swashbuckle.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.AspNetCore.Datasync.Swashbuckle.Test/Microsoft.AspNetCore.Datasync.Swashbuckle.Test.csproj
@@ -39,4 +39,6 @@
     <ProjectReference Include="..\Datasync.Common.Test\Datasync.Common.Test.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties swagger_1json__JsonSchema="openapi" /></VisualStudio></ProjectExtensions>
+
 </Project>
