feat: Updating to latest uno; removing wpf

--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Windows/Properties/launchSettings.json
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Windows/Properties/launchSettings.json
@@ -1,8 +1,10 @@
 {
   "profiles": {
-    "TodoApp.Uno.Windows": {
-      "commandName": "MsixPackage",
-      "alwaysReinstallApp": true
-    }
+	"TodoApp.Uno.Windows (Package)": {
+	  "commandName": "MsixPackage"
+	},
+	"TodoApp.Uno.Windows (Unpackaged)": {
+	  "commandName": "Project"
+	}
   }
 }
