--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
@@ -1,70 +1,56 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net7.0-android</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net7.0-ios</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net7.0-maccatalyst</TargetFrameworks>
-
-
-	</PropertyGroup>
-	<PropertyGroup>
+		<TargetFrameworks>net7.0-ios;net7.0-android;net7.0-maccatalyst</TargetFrameworks>
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
 		<!-- Display name -->
 		<ApplicationTitle>TodoApp.Uno</ApplicationTitle>
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.TodoApp.Uno</ApplicationId>
-		<ApplicationIdGuid>F2EB1774-8F85-4A53-8BA4-EB4C7B0579C4</ApplicationIdGuid>
+		<ApplicationIdGuid>3453B2FD-D349-4185-90CF-CA0211E52A1F</ApplicationIdGuid>
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
+
+		<AndroidManifest>Android\AndroidManifest.xml</AndroidManifest>
+
+		<!-- Debugger workaround https://github.com/dotnet/maui-samples/blob/8aa6b8780b12e97b157514c3bdc54bb4a13001cd/HelloMacCatalyst/HelloMacCatalyst.csproj#L7 -->
+		<!-- <MtouchExtraArgs Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> -->
+		<!-- Required for C# Hot Reload -->
+		<UseInterpreter Condition="'$(Configuration)' == 'Debug' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'maccatalyst'">True</UseInterpreter>
 		<IsUnoHead>true</IsUnoHead>
-		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-ios'">14.2</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-android'">21.0</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net7.0-macos'">10.14</SupportedOSPlatformVersion>
-		<UseMauiEssentials>true</UseMauiEssentials>
 	</PropertyGroup>
-	<PropertyGroup Condition="'$(RuntimeIdentifier)'==''">
-		<!-- Default values for command line builds -->
-		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-ios'">iossimulator-x64</RuntimeIdentifier>
-		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-maccatalyst'">maccatalyst-x64</RuntimeIdentifier>
-		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
-	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Datasync.Client" Version="5.0.20" />
-		<PackageReference Include="Uno.WinUI" Version="4.7.44" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.44" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.44" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.7.44" />
+		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
+		<PackageReference Include="Uno.WinUI" Version="4.8.15" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.15" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.15" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 	<Choose>
-		<When Condition="'$(TargetFramework)'=='net7.0-android'">
-			<PropertyGroup Condition="'$(Configuration)'=='Release'">
-				<!-- Workaround for .NET Android issue https://github.com/xamarin/xamarin-android/issues/7736 -->
-				<RuntimeIdentifier>android-arm64</RuntimeIdentifier>
-			</PropertyGroup>
+		<When Condition="$(IsAndroid)">
 			<ItemGroup>
-				<PackageReference Include="Xamarin.Google.Android.Material" Version="1.7.0" />
+				<PackageReference Include="Xamarin.Google.Android.Material" Version="1.8.0" />
 				<PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
 			</ItemGroup>
 			<ItemGroup>
 				<AndroidEnvironment Include="Android/environment.conf" />
 			</ItemGroup>
 		</When>
-		<When Condition="'$(TargetFramework)'=='net7.0-ios'">
-			<PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
+		<When Condition="$(IsIOS)">
+			<PropertyGroup>
 				<MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
 				<!-- See https://github.com/unoplatform/uno/issues/9430 for more details. -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
 				<!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
 			</PropertyGroup>
-			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-			</ItemGroup>
 		</When>
-		<When Condition="'$(TargetFramework)'=='net7.0-maccatalyst'">
+		<When Condition="$(IsMacCatalyst)">
 			<PropertyGroup>
 				<!-- Configure the GC -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
@@ -75,11 +61,7 @@
 				<!-- Full globalization is required for Uno -->
 				<InvariantGlobalization>false</InvariantGlobalization>
 			</PropertyGroup>
-			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-			</ItemGroup>
 		</When>
-
 	</Choose>
 	<ItemGroup>
 		<ProjectReference Include="..\TodoApp.Uno\TodoApp.Uno.csproj" />
