--- a/samples/TodoApp/TodoApp.Uno/Directory.Build.props
+++ b/samples/TodoApp/TodoApp.Uno/Directory.Build.props
@@ -53,6 +53,7 @@
 				<IsWinAppSdk>true</IsWinAppSdk>
 				<SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
+				<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
 			</PropertyGroup>
 		</When>
 	</Choose>
