--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Mobile/TodoApp.Uno.Mobile.csproj
@@ -24,12 +24,14 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Datasync.Client" Version="5.0.20" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
-		<PackageReference Include="Uno.WinUI" Version="4.8.15" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.5.5" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.282" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.15" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.282" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.15" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.282" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
