--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno/TodoApp.Uno.csproj
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno/TodoApp.Uno.csproj
@@ -9,6 +9,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" Version="4.8.15" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.5.5" />
+		
+		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.282" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
