Run post-build checked on PR as well as mainline build

--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -217,7 +217,7 @@ stages:
 
   - stage: postbuild
     displayName: Postbuild Checks
-    condition: eq('refs/heads/main', variables['Build.SourceBranch'])
+    condition: or(eq('refs/heads/main', variables['Build.SourceBranch']), eq(variables['Build.Reason'], 'PullRequest'))
     dependsOn: [ 'buildstage' ]
     jobs:
       - job: postbuild_checks
