--- a/.ci/dotnet-build.yml
+++ b/.ci/dotnet-build.yml
@@ -217,7 +217,7 @@ stages:
 
   - stage: postbuild
     displayName: Postbuild Checks
-    condition: eq('refs/heads/main', variables['Build.SourceBranch'])
+    condition: or(eq('refs/heads/main', variables['Build.SourceBranch']), eq(variables['Build.Reason'], 'PullRequest'))
     dependsOn: [ 'buildstage' ]
     jobs:
       - job: postbuild_checks
@@ -235,16 +235,15 @@ stages:
               echo "Using codebase: $CODEBASE_NAME"
               Write-Host "##vso[task.setvariable variable=CODEBASE_NAME]$CODEBASENAME"
 
-          - task: CredScan@2
+          - task: CredScan@3
             inputs:
               toolMajorVersion: 'V2'
 
-          - task: PoliCheck@1
+          - task: PoliCheck@2
             inputs:
-              inputType: 'Basic'
               targetType: 'F'
 
-          - task: SdtReport@1
+          - task: SdtReport@2
             displayName: 'Create security analysis report'
             inputs:
               AllTools: false
